--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="nft-preview-card/nft-preview-card-component-main/images/favicon-32x32.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -110,7 +110,7 @@
 
 <body>
   <div class="start">
-    <img src="/images/image-equilibrium.jpg" alt="" width="250px">
+    <img src="nft-preview-card/nft-preview-card-component-main/images/image-equilibrium.jpg" alt="" width="250px">
     <div class="content">
       <p class="hello">Equilibrium #3429</p>
       <p class="hello1">Our Equilibrium collection promotes balance and calm.</p>
@@ -127,7 +127,7 @@
       </svg>
       <hr>
       <div class="hi">
-        <img src="/images/image-avatar.png" alt="" width="40px" height="40px">
+        <img src="nft-preview-card/nft-preview-card-component-main/images/image-avatar.png" alt="" width="40px" height="40px">
       </div>
       <p class="last">Creation of <span class="hl">Julian Wyvern</span></p>
     </div>
