--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     .start {
       background-color: hsl(216, 50%, 16%);
       width: 300px;
-      height: 483px;
+      height: 470px;
       margin: auto;
       border-radius: 14px;
       position: relative;
@@ -30,6 +30,7 @@
     }
 
     .start img {
+      display: block;
       position: relative;
       margin-left: 23px;
       border-radius: 13px;
@@ -43,6 +44,11 @@
       padding-left: 19px;
       position: relative;
       top: 12px;
+    }
+
+    .hello:hover {
+      color: hsl(178, 100%, 50%);
+      cursor: pointer;
     }
 
     .hello1 {
@@ -79,31 +85,43 @@
 
     .hi img {
       position: relative;
-      display:inline-block;
-      border:2px solid white;
+      display: inline-block;
+      border: 2px solid white;
       border-radius: 45px;
       margin-bottom: 197px;
       margin-top: -107px;
+      right:9px;
     }
+
     footer {
       color: aliceblue;
+      position: relative;
+      top: 17em;
+      text-align: center;
     }
-    hr{
-      position:relative;
-      bottom:93px;
-      border:2px solid hsl(215, 32%, 27%);
-      background-color:hsl(215, 32%, 27%);
+
+    hr {
+      position: relative;
+      bottom: 93px;
+      border: 2px solid hsl(215, 32%, 27%);
+      background-color: hsl(215, 32%, 27%);
       padding-left: 33px;
     }
 
-    .last{
-      color:hsl(215, 51%, 70%);
+    .last {
+      color: hsl(215, 51%, 70%);
       position: relative;
       bottom: 236px;
-      left: 83px;
+      left: 75px;
     }
-    .hl{
-       color:white;
+
+    .hl {
+      color: white;
+    }
+
+    .hl:hover {
+      color: hsl(178, 100%, 50%);
+      cursor: pointer;
     }
   </style>
 </head>
